Update and rename index.html to main.html

--- a/main.html
+++ b/main.html
@@ -226,7 +226,7 @@
 <div class="nav">
   <span class="navtext">samuel's space 🔥</span>
   <ul>
-    <li><a href="index.html" class="a-nav">home</a></li>
+    <li><a href="main.html" class="a-nav">home</a></li>
     <li><a href="projects.html" class="a-nav">projects</a></li>
     <li><a href="https://drive.google.com/file/d/1XjOSp4F8r6kPvXl9vK8uk41bGxnH18is/view?usp=sharing" class="a-nav">resume</a></li>
   </ul>
