--- a/projects.html
+++ b/projects.html
@@ -134,6 +134,18 @@
           transform: scale(1.6);
           transition: transform 0.5s ease;
         }
+
+        @media (max-width: 1100px) {
+          .grid-container {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 20px;
+            margin: 20px;
+            margin-bottom: 10px;
+            flex-grow: 1;
+
+          }
+        }
       
     </style>
 </head>
